add company update
