# backend/company/internal/delivery/http/handlers/company.go
@@ -12,21 +12,25 @@ import (
 	"github.com/HghaVlad/trainee-match/backend/company/internal/domain/errors"
 	"github.com/HghaVlad/trainee-match/backend/company/internal/usecase/create_company"
 	"github.com/HghaVlad/trainee-match/backend/company/internal/usecase/get_company"
+	"github.com/HghaVlad/trainee-match/backend/company/internal/usecase/update_company"
 )
 
 type CompanyHandler struct {
 	getByID *get_company.GetByIDUsecase
 	create  *create_company.Usecase
+	update  *update_company.Usecase
 }
 
 func NewProfileHandler(
 	getByID *get_company.GetByIDUsecase,
 	create *create_company.Usecase,
+	update *update_company.Usecase,
 ) *CompanyHandler {
 
 	return &CompanyHandler{
 		getByID: getByID,
 		create:  create,
+		update:  update,
 	}
 }
 
@@ -102,6 +106,51 @@ func (h *CompanyHandler) Create(w http.ResponseWriter, r *http.Request) {
 
 	dtoResp := mapper.CompanyCreateRespToDto(resp)
 	responds.RespondJSON(w, http.StatusCreated, dtoResp)
+}
+
+// Update godoc
+// @Summary Update company
+// @Description Partially updates company fields, if field not provided or null - it won't be changed
+// @Tags company
+// @Accept json
+// @Produce json
+// @Param id path string true "Company ID"
+// @Param company_request body dto.CompanyUpdateRequest true "Request to update company"
+// @Success 204
+// @Failure 400 {object} responds.ErrorResponse
+// @Failure 404 {object} responds.ErrorResponse
+// @Failure 409 {object} responds.ErrorResponse
+// @Failure 500 {object} responds.ErrorResponse
+// @Router /companies/{id} [patch]
+func (h *CompanyHandler) Update(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	id, err := middleware.UUIDFromContext(ctx)
+	if err != nil {
+		h.handleErr(w, err)
+		return
+	}
+
+	dtoReq, err := middleware.BodyFromContext[dto.CompanyUpdateRequest](ctx)
+	if err != nil {
+		h.handleErr(w, err)
+		return
+	}
+
+	if dtoReq.Name != nil && *dtoReq.Name == "" {
+		responds.RespondError(w, http.StatusBadRequest, errors.New("name cannot be empty"))
+		return
+	}
+
+	req := mapper.CompanyUpdateReqToUC(id, dtoReq)
+
+	err = h.update.Execute(ctx, req)
+	if err != nil {
+		h.handleErr(w, err)
+		return
+	}
+
+	w.WriteHeader(http.StatusNoContent)
 }
 
 func (h *CompanyHandler) handleErr(w http.ResponseWriter, err error) {
